src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> decSeq
Rule 2     dec -> varDec
Rule 3     dec -> ID ABREPAREN paramList FECHAPAREN ABRECHAVE block FECHACHAVE
Rule 4     dec -> type ID ABREPAREN paramList FECHAPAREN ABRECHAVE block FECHACHAVE
Rule 5     varDec -> type varSpecSeq PONTOVIRGULA
Rule 6     varSpec -> ID
Rule 7     varSpec -> ID ATRIB literal
Rule 8     varSpec -> ID ABRECOLCH NUMBER FECHACOLCH
Rule 9     varSpec -> ID ABRECOLCH NUMBER FECHACOLCH ATRIB ABRECHAVE literalSeq FECHACHAVE
Rule 10    type -> INT
Rule 11    type -> STRING
Rule 12    type -> BOOL
Rule 13    param -> type ID
Rule 14    param -> type ID ABRECOLCH FECHACOLCH
Rule 15    block -> varDecList stmtList
Rule 16    stmt -> ifStmt
Rule 17    stmt -> whileStmt
Rule 18    stmt -> forStmt
Rule 19    stmt -> breakStmt
Rule 20    stmt -> returnStmt
Rule 21    stmt -> readStmt
Rule 22    stmt -> writeStmt
Rule 23    stmt -> assign PONTOVIRGULA
Rule 24    stmt -> subCall PONTOVIRGULA
Rule 25    ifStmt -> IF ABREPAREN exp FECHAPAREN ABRECHAVE block FECHACHAVE
Rule 26    ifStmt -> IF ABREPAREN exp FECHAPAREN FECHACHAVE block FECHACHAVE ELSE ABRECHAVE block FECHACHAVE
Rule 27    whileStmt -> WHILE ABREPAREN exp FECHAPAREN ABRECHAVE block FECHACHAVE
Rule 28    forStmt -> FOR ABREPAREN assign PONTOVIRGULA exp PONTOVIRGULA assign FECHAPAREN ABRECHAVE block FECHACHAVE
Rule 29    breakStmt -> BREAK PONTOVIRGULA
Rule 30    readStmt -> READ var PONTOVIRGULA
Rule 31    writeStmt -> WRITE expList PONTOVIRGULA
Rule 32    returnStmt -> RETURN PONTOVIRGULA
Rule 33    returnStmt -> RETURN exp PONTOVIRGULA
Rule 34    subCall -> ID ABREPAREN expList FECHAPAREN
Rule 35    assign -> var ATRIB exp
Rule 36    assign -> var MAISATRIB exp
Rule 37    assign -> var MENOSATRIB exp
Rule 38    assign -> var MULTATRIB exp
Rule 39    assign -> var DIVATRIB exp
Rule 40    assign -> var MODATRIB exp
Rule 41    var -> ID
Rule 42    var -> ID ABRECOLCH exp FECHACOLCH
Rule 43    exp -> exp MAIS exp
Rule 44    exp -> exp MENOS exp
Rule 45    exp -> exp MULT exp
Rule 46    exp -> exp DIV exp
Rule 47    exp -> exp MOD exp
Rule 48    exp -> exp IGUAL exp
Rule 49    exp -> exp DIFERENTE exp
Rule 50    exp -> exp MENORIGUAL exp
Rule 51    exp -> exp MAIORIGUAL exp
Rule 52    exp -> exp MAIOR exp
Rule 53    exp -> exp MENOR exp
Rule 54    exp -> exp E exp
Rule 55    exp -> exp OU exp
Rule 56    exp -> NEG exp
Rule 57    exp -> SINAL exp
Rule 58    exp -> exp TERNARIOSE exp TERNARIOSENAO exp
Rule 59    exp -> subCall
Rule 60    exp -> var
Rule 61    exp -> literal
Rule 62    exp -> ABREPAREN exp FECHAPAREN
Rule 63    exp -> param
Rule 64    literal -> NUMBER
Rule 65    literal -> CADEIA
Rule 66    literal -> TRUE
Rule 67    literal -> FALSE
Rule 68    paramList -> paramSeq
Rule 69    paramList -> empty
Rule 70    paramSeq -> param VIRGULA paramSeq
Rule 71    paramSeq -> param
Rule 72    varDecList -> varDec varDecList
Rule 73    varDecList -> empty
Rule 74    varSpecSeq -> varSpec VIRGULA varSpecSeq
Rule 75    varSpecSeq -> varSpec
Rule 76    expList -> expSeq
Rule 77    expList -> empty
Rule 78    literalSeq -> literal VIRGULA literalSeq
Rule 79    literalSeq -> literal
Rule 80    stmtList -> stmt stmtList
Rule 81    stmtList -> empty
Rule 82    decSeq -> dec decSeq
Rule 83    decSeq -> dec
Rule 84    expSeq -> exp VIRGULA expSeq
Rule 85    expSeq -> exp
Rule 86    empty -> <empty>

Terminals, with rules where they appear

ABRECHAVE            : 3 4 9 25 26 27 28
ABRECOLCH            : 8 9 14 42
ABREPAREN            : 3 4 25 26 27 28 34 62
ATRIB                : 7 9 35
BOOL                 : 12
BREAK                : 29
CADEIA               : 65
DIFERENTE            : 49
DIV                  : 46
DIVATRIB             : 39
E                    : 54
ELSE                 : 26
FALSE                : 67
FECHACHAVE           : 3 4 9 25 26 26 26 27 28
FECHACOLCH           : 8 9 14 42
FECHAPAREN           : 3 4 25 26 27 28 34 62
FOR                  : 28
ID                   : 3 4 6 7 8 9 13 14 34 41 42
IF                   : 25 26
IGUAL                : 48
INT                  : 10
MAIOR                : 52
MAIORIGUAL           : 51
MAIS                 : 43
MAISATRIB            : 36
MENOR                : 53
MENORIGUAL           : 50
MENOS                : 44
MENOSATRIB           : 37
MOD                  : 47
MODATRIB             : 40
MULT                 : 45
MULTATRIB            : 38
NEG                  : 56
NUMBER               : 8 9 64
OU                   : 55
PONTOVIRGULA         : 5 23 24 28 28 29 30 31 32 33
READ                 : 30
RETURN               : 32 33
SINAL                : 57
STRING               : 11
TERNARIOSE           : 58
TERNARIOSENAO        : 58
TRUE                 : 66
VIRGULA              : 70 74 78 84
WHILE                : 27
WRITE                : 31
error                : 

Nonterminals, with rules where they appear

assign               : 23 28 28
block                : 3 4 25 26 26 27 28
breakStmt            : 19
dec                  : 82 83
decSeq               : 1 82
empty                : 69 73 77 81
exp                  : 25 26 27 28 33 35 36 37 38 39 40 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 57 58 58 58 62 84 85
expList              : 31 34
expSeq               : 76 84
forStmt              : 18
ifStmt               : 16
literal              : 7 61 78 79
literalSeq           : 9 78
param                : 63 70 71
paramList            : 3 4
paramSeq             : 68 70
program              : 0
readStmt             : 21
returnStmt           : 20
stmt                 : 80
stmtList             : 15 80
subCall              : 24 59
type                 : 4 5 13 14
var                  : 30 35 36 37 38 39 40 60
varDec               : 2 72
varDecList           : 15 72
varSpec              : 74 75
varSpecSeq           : 5 74
whileStmt            : 17
writeStmt            : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . decSeq
    (82) decSeq -> . dec decSeq
    (83) decSeq -> . dec
    (2) dec -> . varDec
    (3) dec -> . ID ABREPAREN paramList FECHAPAREN ABRECHAVE block FECHACHAVE
    (4) dec -> . type ID ABREPAREN paramList FECHAPAREN ABRECHAVE block FECHACHAVE
    (5) varDec -> . type varSpecSeq PONTOVIRGULA
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOL

    ID              shift and go to state 2
    INT             shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 8

    decSeq                         shift and go to state 1
    dec                            shift and go to state 6
    program                        shift and go to state 7
    type                           shift and go to state 4
    varDec                         shift and go to state 5

state 1

    (1) program -> decSeq .

    $end            reduce using rule 1 (program -> decSeq .)


state 2

    (3) dec -> ID . ABREPAREN paramList FECHAPAREN ABRECHAVE block FECHACHAVE

    ABREPAREN       shift and go to state 10


state 3

    (10) type -> INT .

    ID              reduce using rule 10 (type -> INT .)


state 4

    (4) dec -> type . ID ABREPAREN paramList FECHAPAREN ABRECHAVE block FECHACHAVE
    (5) varDec -> type . varSpecSeq PONTOVIRGULA
    (74) varSpecSeq -> . varSpec VIRGULA varSpecSeq
    (75) varSpecSeq -> . varSpec
    (6) varSpec -> . ID
    (7) varSpec -> . ID ATRIB literal
    (8) varSpec -> . ID ABRECOLCH NUMBER FECHACOLCH
    (9) varSpec -> . ID ABRECOLCH NUMBER FECHACOLCH ATRIB ABRECHAVE literalSeq FECHACHAVE

    ID              shift and go to state 11

    varSpecSeq                     shift and go to state 12
    varSpec                        shift and go to state 13

state 5

    (2) dec -> varDec .

    ID              reduce using rule 2 (dec -> varDec .)
    INT             reduce using rule 2 (dec -> varDec .)
    STRING          reduce using rule 2 (dec -> varDec .)
    BOOL            reduce using rule 2 (dec -> varDec .)
    $end            reduce using rule 2 (dec -> varDec .)


state 6

    (82) decSeq -> dec . decSeq
    (83) decSeq -> dec .
    (82) decSeq -> . dec decSeq
    (83) decSeq -> . dec
    (2) dec -> . varDec
    (3) dec -> . ID ABREPAREN paramList FECHAPAREN ABRECHAVE block FECHACHAVE
    (4) dec -> . type ID ABREPAREN paramList FECHAPAREN ABRECHAVE block FECHACHAVE
    (5) varDec -> . type varSpecSeq PONTOVIRGULA
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOL

    $end            reduce using rule 83 (decSeq -> dec .)
    ID              shift and go to state 2
    INT             shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 8

    decSeq                         shift and go to state 14
    dec                            shift and go to state 6
    type                           shift and go to state 4
    varDec                         shift and go to state 5

state 7

    (0) S' -> program .



state 8

    (12) type -> BOOL .

    ID              reduce using rule 12 (type -> BOOL .)


state 9

    (11) type -> STRING .

    ID              reduce using rule 11 (type -> STRING .)


state 10

    (3) dec -> ID ABREPAREN . paramList FECHAPAREN ABRECHAVE block FECHACHAVE
    (68) paramList -> . paramSeq
    (69) paramList -> . empty
    (70) paramSeq -> . param VIRGULA paramSeq
    (71) paramSeq -> . param
    (86) empty -> .
    (13) param -> . type ID
    (14) param -> . type ID ABRECOLCH FECHACOLCH
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOL

    FECHAPAREN      reduce using rule 86 (empty -> .)
    INT             shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 8

    paramSeq                       shift and go to state 18
    paramList                      shift and go to state 15
    empty                          shift and go to state 16
    param                          shift and go to state 19
    type                           shift and go to state 17

state 11

    (4) dec -> type ID . ABREPAREN paramList FECHAPAREN ABRECHAVE block FECHACHAVE
    (6) varSpec -> ID .
    (7) varSpec -> ID . ATRIB literal
    (8) varSpec -> ID . ABRECOLCH NUMBER FECHACOLCH
    (9) varSpec -> ID . ABRECOLCH NUMBER FECHACOLCH ATRIB ABRECHAVE literalSeq FECHACHAVE

    ABREPAREN       shift and go to state 20
    VIRGULA         reduce using rule 6 (varSpec -> ID .)
    PONTOVIRGULA    reduce using rule 6 (varSpec -> ID .)
    ATRIB           shift and go to state 21
    ABRECOLCH       shift and go to state 22


state 12

    (5) varDec -> type varSpecSeq . PONTOVIRGULA

    PONTOVIRGULA    shift and go to state 23


state 13

    (74) varSpecSeq -> varSpec . VIRGULA varSpecSeq
    (75) varSpecSeq -> varSpec .

    VIRGULA         shift and go to state 24
    PONTOVIRGULA    reduce using rule 75 (varSpecSeq -> varSpec .)


state 14

    (82) decSeq -> dec decSeq .

    $end            reduce using rule 82 (decSeq -> dec decSeq .)


state 15

    (3) dec -> ID ABREPAREN paramList . FECHAPAREN ABRECHAVE block FECHACHAVE

    FECHAPAREN      shift and go to state 25


state 16

    (69) paramList -> empty .

    FECHAPAREN      reduce using rule 69 (paramList -> empty .)


state 17

    (13) param -> type . ID
    (14) param -> type . ID ABRECOLCH FECHACOLCH

    ID              shift and go to state 26


state 18

    (68) paramList -> paramSeq .

    FECHAPAREN      reduce using rule 68 (paramList -> paramSeq .)


state 19

    (70) paramSeq -> param . VIRGULA paramSeq
    (71) paramSeq -> param .

    VIRGULA         shift and go to state 27
    FECHAPAREN      reduce using rule 71 (paramSeq -> param .)


state 20

    (4) dec -> type ID ABREPAREN . paramList FECHAPAREN ABRECHAVE block FECHACHAVE
    (68) paramList -> . paramSeq
    (69) paramList -> . empty
    (70) paramSeq -> . param VIRGULA paramSeq
    (71) paramSeq -> . param
    (86) empty -> .
    (13) param -> . type ID
    (14) param -> . type ID ABRECOLCH FECHACOLCH
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOL

    FECHAPAREN      reduce using rule 86 (empty -> .)
    INT             shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 8

    paramSeq                       shift and go to state 18
    paramList                      shift and go to state 28
    empty                          shift and go to state 16
    param                          shift and go to state 19
    type                           shift and go to state 17

state 21

    (7) varSpec -> ID ATRIB . literal
    (64) literal -> . NUMBER
    (65) literal -> . CADEIA
    (66) literal -> . TRUE
    (67) literal -> . FALSE

    NUMBER          shift and go to state 33
    CADEIA          shift and go to state 30
    TRUE            shift and go to state 32
    FALSE           shift and go to state 29

    literal                        shift and go to state 31

state 22

    (8) varSpec -> ID ABRECOLCH . NUMBER FECHACOLCH
    (9) varSpec -> ID ABRECOLCH . NUMBER FECHACOLCH ATRIB ABRECHAVE literalSeq FECHACHAVE

    NUMBER          shift and go to state 34


state 23

    (5) varDec -> type varSpecSeq PONTOVIRGULA .

    INT             reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    STRING          reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    BOOL            reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    IF              reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    WHILE           reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    FOR             reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    BREAK           reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    RETURN          reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    READ            reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    WRITE           reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    ID              reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    FECHACHAVE      reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)
    $end            reduce using rule 5 (varDec -> type varSpecSeq PONTOVIRGULA .)


state 24

    (74) varSpecSeq -> varSpec VIRGULA . varSpecSeq
    (74) varSpecSeq -> . varSpec VIRGULA varSpecSeq
    (75) varSpecSeq -> . varSpec
    (6) varSpec -> . ID
    (7) varSpec -> . ID ATRIB literal
    (8) varSpec -> . ID ABRECOLCH NUMBER FECHACOLCH
    (9) varSpec -> . ID ABRECOLCH NUMBER FECHACOLCH ATRIB ABRECHAVE literalSeq FECHACHAVE

    ID              shift and go to state 36

    varSpecSeq                     shift and go to state 35
    varSpec                        shift and go to state 13

state 25

    (3) dec -> ID ABREPAREN paramList FECHAPAREN . ABRECHAVE block FECHACHAVE

    ABRECHAVE       shift and go to state 37


state 26

    (13) param -> type ID .
    (14) param -> type ID . ABRECOLCH FECHACOLCH

    MAIS            reduce using rule 13 (param -> type ID .)
    MENOS           reduce using rule 13 (param -> type ID .)
    MULT            reduce using rule 13 (param -> type ID .)
    DIV             reduce using rule 13 (param -> type ID .)
    MOD             reduce using rule 13 (param -> type ID .)
    IGUAL           reduce using rule 13 (param -> type ID .)
    DIFERENTE       reduce using rule 13 (param -> type ID .)
    MENORIGUAL      reduce using rule 13 (param -> type ID .)
    MAIORIGUAL      reduce using rule 13 (param -> type ID .)
    MAIOR           reduce using rule 13 (param -> type ID .)
    MENOR           reduce using rule 13 (param -> type ID .)
    E               reduce using rule 13 (param -> type ID .)
    OU              reduce using rule 13 (param -> type ID .)
    TERNARIOSE      reduce using rule 13 (param -> type ID .)
    PONTOVIRGULA    reduce using rule 13 (param -> type ID .)
    FECHAPAREN      reduce using rule 13 (param -> type ID .)
    VIRGULA         reduce using rule 13 (param -> type ID .)
    FECHACOLCH      reduce using rule 13 (param -> type ID .)
    TERNARIOSENAO   reduce using rule 13 (param -> type ID .)
    ABRECOLCH       shift and go to state 38


state 27

    (70) paramSeq -> param VIRGULA . paramSeq
    (70) paramSeq -> . param VIRGULA paramSeq
    (71) paramSeq -> . param
    (13) param -> . type ID
    (14) param -> . type ID ABRECOLCH FECHACOLCH
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOL

    INT             shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 8

    param                          shift and go to state 19
    paramSeq                       shift and go to state 39
    type                           shift and go to state 17

state 28

    (4) dec -> type ID ABREPAREN paramList . FECHAPAREN ABRECHAVE block FECHACHAVE

    FECHAPAREN      shift and go to state 40


state 29

    (67) literal -> FALSE .

    MAIS            reduce using rule 67 (literal -> FALSE .)
    MENOS           reduce using rule 67 (literal -> FALSE .)
    MULT            reduce using rule 67 (literal -> FALSE .)
    DIV             reduce using rule 67 (literal -> FALSE .)
    MOD             reduce using rule 67 (literal -> FALSE .)
    IGUAL           reduce using rule 67 (literal -> FALSE .)
    DIFERENTE       reduce using rule 67 (literal -> FALSE .)
    MENORIGUAL      reduce using rule 67 (literal -> FALSE .)
    MAIORIGUAL      reduce using rule 67 (literal -> FALSE .)
    MAIOR           reduce using rule 67 (literal -> FALSE .)
    MENOR           reduce using rule 67 (literal -> FALSE .)
    E               reduce using rule 67 (literal -> FALSE .)
    OU              reduce using rule 67 (literal -> FALSE .)
    TERNARIOSE      reduce using rule 67 (literal -> FALSE .)
    PONTOVIRGULA    reduce using rule 67 (literal -> FALSE .)
    VIRGULA         reduce using rule 67 (literal -> FALSE .)
    FECHAPAREN      reduce using rule 67 (literal -> FALSE .)
    FECHACOLCH      reduce using rule 67 (literal -> FALSE .)
    TERNARIOSENAO   reduce using rule 67 (literal -> FALSE .)
    FECHACHAVE      reduce using rule 67 (literal -> FALSE .)


state 30

    (65) literal -> CADEIA .

    MAIS            reduce using rule 65 (literal -> CADEIA .)
    MENOS           reduce using rule 65 (literal -> CADEIA .)
    MULT            reduce using rule 65 (literal -> CADEIA .)
    DIV             reduce using rule 65 (literal -> CADEIA .)
    MOD             reduce using rule 65 (literal -> CADEIA .)
    IGUAL           reduce using rule 65 (literal -> CADEIA .)
    DIFERENTE       reduce using rule 65 (literal -> CADEIA .)
    MENORIGUAL      reduce using rule 65 (literal -> CADEIA .)
    MAIORIGUAL      reduce using rule 65 (literal -> CADEIA .)
    MAIOR           reduce using rule 65 (literal -> CADEIA .)
    MENOR           reduce using rule 65 (literal -> CADEIA .)
    E               reduce using rule 65 (literal -> CADEIA .)
    OU              reduce using rule 65 (literal -> CADEIA .)
    TERNARIOSE      reduce using rule 65 (literal -> CADEIA .)
    PONTOVIRGULA    reduce using rule 65 (literal -> CADEIA .)
    VIRGULA         reduce using rule 65 (literal -> CADEIA .)
    FECHAPAREN      reduce using rule 65 (literal -> CADEIA .)
    FECHACOLCH      reduce using rule 65 (literal -> CADEIA .)
    TERNARIOSENAO   reduce using rule 65 (literal -> CADEIA .)
    FECHACHAVE      reduce using rule 65 (literal -> CADEIA .)


state 31

    (7) varSpec -> ID ATRIB literal .

    VIRGULA         reduce using rule 7 (varSpec -> ID ATRIB literal .)
    PONTOVIRGULA    reduce using rule 7 (varSpec -> ID ATRIB literal .)


state 32

    (66) literal -> TRUE .
